--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -19,6 +19,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_marginBottom="300dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
@@ -97,7 +98,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="5dp"
                     android:background="@drawable/white_background"
                     android:orientation="vertical"
                     android:paddingHorizontal="5dp">
@@ -319,7 +320,6 @@
                     </LinearLayout>
 
                 </LinearLayout>
-
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
