--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -80,6 +80,7 @@
                         android:id="@+id/saveBtn"
                         android:layout_width="match_parent"
                         android:layout_height="65dp"
+                        android:layout_marginBottom="200dp"
                         android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
                         android:backgroundTint="@color/button_background_selector"
