--- a/app/src/main/res/layout/confirm_renew_dialog.xml
+++ b/app/src/main/res/layout/confirm_renew_dialog.xml
@@ -44,6 +44,7 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
