--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -352,6 +352,16 @@
                         android:text="@string/french_label"
                         android:textColor="@color/blue"
                         android:textSize="12sp" />
+                    <TextView
+                        android:id="@+id/englishBtn"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.3"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:gravity="center"
+                        android:text="@string/anglais_label"
+                        android:textColor="@color/blue"
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
