--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -14,13 +14,13 @@
             android:background="@color/background"
             android:overScrollMode="never"
             android:scrollbars="none"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:context=".views.dashboard.payment.PaymentFragment">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginBottom="300dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="300dp"
                 android:orientation="vertical">
 
                 <TextView
